--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="card">
                         <img src="images/turretshooter.png" class="card-img-top">
                         <div class="card-body"> 
-                                <h5 class="card-title">Turret Shooter</h5>
+                                <h5 class="card-title">Turret Shooter Game</h5>
                                 <h6 class="card-subtitle text-muted">JavaScript Game</h6>
                                 <p class="cary-text">HTML - CSS - Javascript </p>
                                 <a href="https://garretlisto.github.io/turretshootergame/" target="_blank">View Project</a>
