--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>Garret Listo Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -145,7 +146,7 @@
                 <div class="card">
                         <img src="images/turretshooter.png" class="card-img-top">
                         <div class="card-body"> 
-                                <h5 class="card-title">Turret Shooter Game</h5>
+                                <h5 class="card-title">Turret Shooter</h5>
                                 <h6 class="card-subtitle text-muted">JavaScript Game</h6>
                                 <p class="cary-text">HTML - CSS - Javascript </p>
                                 <a href="https://garretlisto.github.io/turretshootergame/" target="_blank">View Project</a>
@@ -167,6 +168,46 @@
                               </div>
                               </div>
                             </div>
+                          
+    <div class="row">
+        <div class="col-sm-4 text-center p-2">
+                <div class="card">
+                        <img src="images/mygalaxy.png" class="card-img-top">
+                        <div class="card-body"> 
+                                <h5 class="card-title">HTML Cavas Image</h5>
+                                <h6 class="card-subtitle text-muted">Web Design Project</h6>
+                                <p class="cary-text"> JS - CSS </p>
+                                <a href="https://garretlisto.github.io/mygalaxy/
+                                " target="_blank">View Project</a><br>
+  
+                        </div>    
+                       </div>     
+                    </div>
+        <div class="col-sm-4 text-center p-2">
+                <div class="card">
+                        <img src="images/drumkit.png" class="card-img-top">
+                        <div class="card-body"> 
+                                <h5 class="card-title">JS Drumkit</h5>
+                                <h6 class="card-subtitle text-muted">JavaScript Game</h6>
+                                <p class="cary-text">HTML - CSS - Javascript </p>
+                                <a href="https://garretlisto.github.io/drumkit/" target="_blank">View Project</a>
+
+                            </div>
+                        </div>
+                
+        </div>
+        <div class="col-sm-4 text-center p-2">
+                <div class="card">
+                        <img src="images/coffeeclock.png" class="card-img-top">
+                        <div class="card-body"> 
+                                <h5 class="card-title">JS / CSS Clock</h5>
+                                <h6 class="card-subtitle text-muted">Web Design Project</h6>
+                                <p class="cary-text"> HTML - CSS - JavaScript </p>
+                                <a href="https://garretlisto.github.io/clock/" target="_blank">View Project</a>
+                              </div>
+                              </div>
+                              </div>
+                            </div>
                           </div>
 
 
@@ -180,7 +221,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 text-center">
-      <h1> <strong>Programing Languages and Tools</strong></h1><hr><br>
+      <h1> <strong>My Toolkit</strong> </strong></h1><hr><br>
     </div>
   </div>
   
@@ -249,7 +290,7 @@
         <h1>Cincinnati State</h1>
     <h4> Associate of Liberal Arts Degree</h4>
     <h6>Men's Varsity Soccer Team</h6>
-    <p>August 2011 - December 2013 <hr><p><br>
+    <p>August 2009 - May 2011 <hr><p><br>
 </div>
 
 
