--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://docs.google.com/document/d/1oeoTXX7cfiP0yDMl_HCDtmAI-80bzej6A2Ds596z5Iw/edit?usp=sharing">Resume</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
